# research

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  embeddings.py  ingest.py  llm.py  main.py  memory.py  rag.py  reranker.py  vectorstore.py
backend/data/: eval_set.json
backend/scripts/: eval_rag.py  ingest_cli.py
backend/tests/: test_rag.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatWindow.tsx  ComposerInput.tsx  IngestPanel.tsx  MessageBubble.tsx  SourceList.tsx
frontend/src/components/Analytics/: AnalyticsView.tsx  EvalScores.tsx
frontend/src/components/Chat/: ChatInput.tsx  ChatView.tsx  DebugPanel.tsx  MessageBubble.tsx  SourcesAccordion.tsx  TypingIndicator.tsx
frontend/src/components/Dashboard/: ActivityFeed.tsx  DashboardView.tsx  StatsRow.tsx
frontend/src/components/KnowledgeBase/: DocumentCard.tsx  KnowledgeBaseView.tsx  URLIngestor.tsx  UploadZone.tsx
frontend/src/components/Layout/: RightDrawer.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/Settings/: SettingsView.tsx
frontend/src/components/UI/: AnimatedCounter.tsx  Badge.tsx  ErrorBanner.tsx  Modal.tsx  Spinner.tsx
frontend/src/lib/: api.ts  errors.ts  store.ts
