[project]
name = "rag-chatbot-backend"
version = "0.1.0"
description = "FastAPI backend for a RAG chatbot using Groq + Pinecone + sentence-transformers."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "groq>=0.11",
    "pinecone>=5.0",
    "sentence-transformers>=3.0",
    "pypdf>=4.3",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "tiktoken>=0.7",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
